--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
+fastapi
+uvicorn
+python-multipart
+pillow
+pytesseract
+langchain
+langchain-openai
+python-dotenv
+openai
+pymongo
