--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.5.1",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2"
   }
